--- a/Assessment.html
+++ b/Assessment.html
@@ -3,10 +3,8 @@
   <head>
     <meta name="description" content="Actualmente estudio en el C.E.S.U.F.A.M; donde se enseña inglés, cómputo o informática y nos preparan para la vida cotidiana dándonos clases de psicología y habilidades que podemos desarrollar en la vida cotidiana.">
     <meta name="keywords" content="Informatica, Inglés, clases, vida cotidiana">
-    <meta name = "viewport" content="wi"
-
   </head>   
-<body>
-
+<body style="background-color:#ff2a00;">
+  QUI UN EJEMPLO DE PAGINA SENCILLA
 </body>
 </html>
